# oberon

./: .clangd  .gitignore  .gitmodules  README.md  REQUIREMENTS.md  SYSTEM_REQUIREMENTS.md  TODO.md  meson.build  meson_options.txt  requirements.txt
data/oberon/shaders/: meson.build
examples/: debug_context_create.cpp  has_extensions_and_layers.cpp  meson.build  test_frame.cpp  window_create.cpp
examples/cube/: main.cpp
examples/multiwindow/: main.cpp
examples/test_image/: main.cpp
include/oberon/: application.hpp  basics.hpp  bounds.hpp  buffer.hpp  camera.hpp  child_object.hpp  context.hpp  debug.hpp  debug_context.hpp  dependency.hpp  environment.hpp  errors.hpp  events.hpp  frame.hpp  glm.hpp  graphics.hpp  graphics_device.hpp  graphics_subsystem.hpp  image.hpp  imaging_system.hpp  implementation_owner.hpp  input.hpp  io_subsystem.hpp  keys.hpp  macros.hpp  memory.hpp  mesh.hpp  mouse.hpp  oberon.hpp  object.hpp  platform.hpp  rects.hpp  render_target.hpp  render_window.hpp  renderer.hpp  renderer_3d.hpp  rendering_system.hpp  stopwatch.hpp  subsystem.hpp  system.hpp  (+9 more)
include/oberon/concepts/: has_internal_implementation.hpp  vertex.hpp
include/oberon/detail/: builtin_shaders.hpp  context_impl.hpp  debug_context_impl.hpp  dependency_store.hpp  graphics.hpp  graphics_subsystem.hpp  io_subsystem.hpp  object_impl.hpp  renderer_3d_impl.hpp  vulkan.hpp  vulkan_function_table.hpp  window_impl.hpp  x11.hpp  x11_vulkan.hpp  x_server_connection.hpp
include/oberon/detail/linux/: render_window_impl.hpp  system_impl.hpp
include/oberon/interfaces/: disposable.hpp  rendering_system.hpp  window.hpp  windowing_system.hpp
include/oberon/internal/: graphics_context.hpp  graphics_device.hpp  implementation.hpp  system.hpp  vulkan.hpp  vulkan_graphics_context.hpp  vulkan_system.hpp  wsi_graphics_device.hpp  wsi_system.hpp
include/oberon/internal/base/: camera_impl.hpp  frame_impl.hpp  graphics_context.hpp  graphics_device_impl.hpp  mesh_impl.hpp  physical_graphics_device.hpp  pipelines.hpp  render_window_impl.hpp  renderer_impl.hpp  system_impl.hpp  transient_object_pool.hpp  vulkan.hpp  window_impl.hpp
include/oberon/internal/linux/: utility.hpp  wsi_context.hpp  wsi_graphics_device.hpp  wsi_system.hpp
include/oberon/internal/linux/x11/: atoms.hpp  graphics_device_impl.hpp  keys.hpp  render_window_impl.hpp  system_impl.hpp  window_impl.hpp  wsi_context.hpp  wsi_worker.hpp  xcb.hpp
include/oberon/internal/linux/xcb/: wsi_context.hpp  xcb.hpp
include/oberon/linux/: application.hpp  buffer.hpp  context.hpp  environment.hpp  graphics.hpp  graphics_subsystem.hpp  input.hpp  io_subsystem.hpp  platform.hpp  render_system.hpp  render_target.hpp  render_window.hpp  system.hpp  vk.hpp  vk_device.hpp  vulkan.hpp  window.hpp  window_system.hpp  x11-atoms.hpp  x11-errors.hpp  x11-xinput.hpp  x11-xkb.hpp  x11.hpp  x11_vulkan.hpp
include/oberon/linux/detail/: render_system_impl.hpp  render_window_impl.hpp  vulkan.hpp  window_system_impl.hpp  x11.hpp
include/oberon/windowing/: x11_system.hpp  x11_window.hpp
shaders/: meson.build  test_image.frag  test_image.vert  uniforms.glsl  unlit_pc.vert
src/: main.cpp
src/oberon/: application.cpp  camera.cpp  child_object.cpp  context.cpp  debug.cpp  debug_context.cpp  errors.cpp  events.cpp  frame.cpp  graphics.cpp  graphics_device.cpp  graphics_subsystem.cpp  io_subsystem.cpp  keys.cpp  mesh.cpp  mouse.cpp  object.cpp  render_window.cpp  renderer.cpp  renderer_3d.cpp  stopwatch.cpp  system.cpp  vulkan.cpp  window.cpp
src/oberon/detail/: graphics.cpp  graphics_subsystem.cpp  io_subsystem.cpp  vulkan.cpp  vulkan_function_table.cpp  window_impl.cpp  x11.cpp  x_server_connection.cpp
src/oberon/interfaces/: disposable.cpp
src/oberon/internal/: graphics_context.cpp  graphics_device.cpp  system.cpp  vulkan.cpp  vulkan_graphics_context.cpp
src/oberon/internal/base/: camera_impl.cpp  frame_impl.cpp  graphics_context.cpp  graphics_device_impl.cpp  mesh_impl.cpp  physical_graphics_device.cpp  render_window_impl.cpp  renderer_impl.cpp  system_impl.cpp  vulkan.cpp  window_impl.cpp
src/oberon/internal/linux/: wsi_graphics_device.cpp  wsi_system.cpp
src/oberon/internal/linux/x11/: graphics_device_impl.cpp  render_window_impl.cpp  system_impl.cpp  window_impl.cpp  wsi_context.cpp  wsi_worker.cpp
src/oberon/internal/linux/xcb/: wsi_context.cpp
src/oberon/linux/: amd_vk_device.cpp  application.cpp  buffer.cpp  context.cpp  environment.cpp  graphics.cpp  graphics_subsystem.cpp  input.cpp  intel_vk_device.cpp  io_subsystem.cpp  nvidia_vk_device.cpp  platform.cpp  render_system.cpp  render_window.cpp  system.cpp  vk.cpp  vk_device.cpp  vulkan.cpp  window.cpp  window_system.cpp  x11-errors.cpp  x11_vulkan.cpp
src/oberon/linux/detail/: vulkan.cpp
src/shaders/: meson.build
src/shaders/test_frame/: test_frame.frag  test_frame.vert
tools/: dbbuilder.py  dbmerger.py  dbschema.py  spv2cpp.py  spv_to_hpp.py
tools/linux/: dump_buttons.cpp  dump_keycodes.cpp  dump_mods.cpp  meson.build
