##
# @file meson.build
# @brief Example application Meson build script.
# @author Alexander Rothman <gnomesort@megate.ch>
# @date 2023
# @copyright AGPL-3.0+
#
test_image = executable('test_image', files('test_image/main.cpp'), dependencies: oberon_dep)
cube = executable('cube', files('cube/main.cpp'), dependencies: oberon_dep)
