test_image_vert = custom_target('test_image_vert', command: glsl, input: files('test_image.vert'),
                                output: 'test_image.vert.spv', build_by_default: true)
test_image_frag = custom_target('test_image_frag', command: glsl, input: files('test_image.frag'),
                                output: 'test_image.frag.spv', build_by_default: true)
