test_frame_vert = custom_target('test_frame_vert', command: glsl, input: files('test_frame.vert'),
                                output: 'test_frame.vert.spv', build_by_default: true)
test_frame_frag = custom_target('test_frame_frag', command: glsl, input: files('test_frame.frag'),
                                output: 'test_frame.frag.spv', build_by_default: true)
